--- a/Lec11/Views/Home/Index.cshtml
+++ b/Lec11/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
-﻿<link href="~/css/stylesheet.css" rel="stylesheet" />
+﻿@{
+    Layout = "_Layout";
+}
+
+<link href="~/css/stylesheet.css" rel="stylesheet" />
 <h2>Home Controller Index view</h2>
 
 <img class="logo" src="~/Img/logo.png" alt="logo"/>
 
-<h2>Image from static folder</h2>
 
-<img src="~/StaticFiles/logo.png" alt="Logo2" />
+<h2>Updated Heading 2</h2>
+
+
