--- a/Lec11/Pages/Privacy.cshtml
+++ b/Lec11/Pages/Privacy.cshtml
@@ -1,8 +1,6 @@
-﻿@page
-@model PrivacyModel
-@{
-    ViewData["Title"] = "Privacy Policy";
+﻿@{
+    Layout = "_Layout";
 }
-<h1>@ViewData["Title"]</h1>
+
 
 <p>Use this page to detail your site's privacy policy.</p>
