--- a/Lec11/Pages/Shared/_Layout.cshtml
+++ b/Lec11/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>The title is Lec11</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/stylesheet.css" />
 </head>
 <body>
     <header>
@@ -20,9 +21,6 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/Home/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="Shared/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/Home/AboutUs">About Us</a>
