--- a/Lec11/Views/Home/Index.cshtml
+++ b/Lec11/Views/Home/Index.cshtml
@@ -5,9 +5,67 @@
 <link href="~/css/stylesheet.css" rel="stylesheet" />
 <h2>Home Controller Index view</h2>
 
-<img class="logo" src="~/Img/logo.png" alt="logo"/>
+<img class="logo" src="~/Img/logo.png" alt="logo" />
 
 
-<h2>Updated Heading 2</h2>
 
+
+<section class="jumbotron text-center">
+    <div class="container">
+        <h2>Welcome to Book Store</h2>
+        <p class="lead text-muted">
+            This is some text about our book store. 
+            This is some text about our book store.
+            This is some text about our book store. 
+            This is some text about our book store.
+        </p>
+        <p>
+            <a href="#" class="btn btn-primary">Search Books</a>
+        </p>
+
+    </div>
+</section>
+<div class="py-5 bg-light">
+    <div class="container">
+        <h2>Featured Books</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns=""></svg>
+                    <div class="card-body">
+                        <p class="card-text">Short description of the book</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="#" class="btn btn-primary btn-outline-warning">View Details</a>
+                            <small class="text-muted">Author Name</small>
+                        </div>                           
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns=""></svg>
+                    <div class="card-body">
+                        <p class="card-text">Short description of the book</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="#" class="btn btn-primary btn-outline-warning">View Details</a>
+                            <small class="text-muted">Author Name</small>
+                        </div>                           
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns=""></svg>
+                    <div class="card-body">
+                        <p class="card-text">Short description of the book</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="#" class="btn btn-primary btn-outline-warning">View Details</a>
+                            <small class="text-muted">Author Name</small>
+                        </div>                           
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
