Changes upto Lecture 31

--- a/Lec11/Views/Home/AboutUs.cshtml
+++ b/Lec11/Views/Home/AboutUs.cshtml
@@ -1,6 +1,12 @@
-﻿@{
-    Layout = "_Layout";
-}
-
-
+﻿
 <h2>This is about us page</h2>
+
+@section breadCrumb{
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Page 1</a></li>
+            <li class="breadcrumb-item active" aria-current="page">About Us</li>
+        </ol>
+    </nav>
+}
