--- a/Lec11/Views/Home/ContactUs.cshtml
+++ b/Lec11/Views/Home/ContactUs.cshtml
@@ -1,5 +1,13 @@
-﻿@{
-    Layout = "_Layout";
-}
-
+﻿
 <h2>Contact us</h2>
+
+
+@section breadCrumb{
+    <nav aria-label="breadCrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Page 1</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
+        </ol>
+    </nav>
+}
