--- a/Lec11/Views/Book/GetAllBooks.cshtml
+++ b/Lec11/Views/Book/GetAllBooks.cshtml
@@ -1,1 +1,25 @@
-﻿
+﻿@using Lec11.Models
+@model IEnumerable<BookModel>
+
+
+<div class="container">
+    <h2 class="text-info">Books Details</h2>
+    <div class="row">
+        @foreach (var book in Model)
+        {
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"></svg>
+                    <div class="card-body">
+                        <p class="card-text">@book.Title</p>
+                        <p class="card-text">@book.Description</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="/book/GetBook/@book.Id" class="btn btn-primary btn-outline-warning">View Details</a>
+                            <small class="text-muted">Author: @book.Author</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
