--- a/Lec11/Views/Home/Index.cshtml
+++ b/Lec11/Views/Home/Index.cshtml
@@ -1,12 +1,5 @@
-﻿@{
-    Layout = "_Layout";
-}
-
+﻿
 <link href="~/css/stylesheet.css" rel="stylesheet" />
-<h2>Home Controller Index view</h2>
-
-<img class="logo" src="~/Img/logo.png" alt="logo" />
-
 
 
 
@@ -14,9 +7,9 @@
     <div class="container">
         <h2>Welcome to Book Store</h2>
         <p class="lead text-muted">
-            This is some text about our book store. 
             This is some text about our book store.
-            This is some text about our book store. 
+            This is some text about our book store.
+            This is some text about our book store.
             This is some text about our book store.
         </p>
         <p>
@@ -31,37 +24,37 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns=""></svg>
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"></svg>
                     <div class="card-body">
                         <p class="card-text">Short description of the book</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <a href="#" class="btn btn-primary btn-outline-warning">View Details</a>
                             <small class="text-muted">Author Name</small>
-                        </div>                           
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns=""></svg>
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"></svg>
                     <div class="card-body">
                         <p class="card-text">Short description of the book</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <a href="#" class="btn btn-primary btn-outline-warning">View Details</a>
                             <small class="text-muted">Author Name</small>
-                        </div>                           
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns=""></svg>
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"></svg>
                     <div class="card-body">
                         <p class="card-text">Short description of the book</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <a href="#" class="btn btn-primary btn-outline-warning">View Details</a>
                             <small class="text-muted">Author Name</small>
-                        </div>                           
+                        </div>
                     </div>
                 </div>
             </div>
@@ -69,3 +62,10 @@
     </div>
 </div>
 
+@section MyJsSection {
+    <script>
+        $(document).ready(function () {
+            //alert("Document is Ready!");
+        })
+    </script>
+}
