--- a/Lec11/Views/Shared/_Layout.cshtml
+++ b/Lec11/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/stylesheet.css" />
 
-    @* <environment include="Production">
+@*   <environment include="Production">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css-----/bootstrap.min.css"
     rel="stylesheet"
     integrity=""
@@ -26,8 +26,8 @@
     integrity=""
     crossorigin="anonymous">
     </script>
-    </environment>*@
-
+    </environment>
+*@
 
 
 </head>
