--- a/Lec11/Views/Shared/_header.cshtml
+++ b/Lec11/Views/Shared/_header.cshtml
@@ -1,10 +1,11 @@
 ﻿@using Microsoft.Extensions.Configuration
 @using Microsoft.Extensions.Options;
 @inject IConfiguration _configration
-@inject IOptions<BookAlertConfigModel> newBookConfigrations
+@inject IOptionsSnapshot<BookAlertConfigModel> newBookConfigrations
 
 @{
-    var _newBookConfigrations = newBookConfigrations.Value;
+    var _newBookConfigrations = newBookConfigrations.Get("MyBook1");
+    var _thirdBookConfigrations = newBookConfigrations.Get("MyBook2");
     var book = _configration.GetSection("MyNewBook");
 }
 <header>
@@ -20,8 +21,12 @@
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="btn btn-primary btn-outline-warning" href="#">Register</a></li>
-                    <li class="nav-item"><a class="btn btn-primary" href="#">Login</a></li>
+                    <li class="nav-item">
+                        <a class="btn btn-info" asp-controller="Account" asp-action="Signup">SignUp</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-primary" asp-controller="Account" asp-action="Login">Login</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
@@ -37,6 +42,12 @@
     {
         <div calss="bg-info" style="background-color:aquamarine">
             <h2>@(_newBookConfigrations.NewBookName)</h2>
+        </div>
+    }
+    @if (_thirdBookConfigrations.NewBookRelease)
+    {
+        <div calss="bg-info" style="background-color:aquamarine">
+            <h2>@(_thirdBookConfigrations.NewBookName)</h2>
         </div>
     }
 </header>
