--- a/Lec11/Views/Shared/_header.cshtml
+++ b/Lec11/Views/Shared/_header.cshtml
@@ -21,12 +21,7 @@
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="btn btn-info" asp-controller="Account" asp-action="Signup">SignUp</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-primary" asp-controller="Account" asp-action="Login">Login</a>
-                    </li>
+                    <partial name="_logoutInfo"/>
                 </ul>
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
