--- a/Lec11/Views/Account/Login.cshtml
+++ b/Lec11/Views/Account/Login.cshtml
@@ -24,7 +24,7 @@
 
         <div class="row mt-2">
             <div class="col-md-4">
-                <form asp-action="Login">
+                <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Email" class="control-label"></label>
@@ -53,6 +53,7 @@
 
         <div class="row mt-2">
             <div class="col-sm-3">
+                <a class="btn btn-warning" asp-action="ForgotPassword" asp-controller="Account">Forgot password?</a></p>
                 <a class="btn btn-primary" asp-controller="Account" asp-action="Signup">SignUp</a>
             </div>
             <div class="col-sm-3">
