--- a/Lec11/Views/Shared/_header.cshtml
+++ b/Lec11/Views/Shared/_header.cshtml
@@ -29,6 +29,8 @@
                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="contactus">Contact</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Book" asp-action="GetAllBooks">Get All Books</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Book" asp-action="AddBook">Add New Book</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" asp-area="Admin" asp-controller="Home" asp-action="Index">Admin</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" asp-area="Financial" asp-controller="Home" asp-action="Index">Financial</a></li>
                 </ul>
             </div>
         </div>
